fixed button alignment

--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,10 @@ h6 {
         width: 3vh;
         height: 3vh;
     }
+
+    .button-align{
+        margin-left: 12vh;
+    }
 }
 
 @media only screen and (min-width: 1000px){
